--- a/Tugas Besar Web Dasar (Kelompok 4)/Halaman 4/kelebihan dan kekurangan.html
+++ b/Tugas Besar Web Dasar (Kelompok 4)/Halaman 4/kelebihan dan kekurangan.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Halaman 4/style/style kelebihan dan kekurangan.css">
-    <title>Kelebihan</title>
-    <link rel="stylesheet" href="../Halaman 4/style/style kelebihan dan kekurangan.css"
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
+    <title>Kelebihan dan Kekurangan</title>
+     <!-- bootstrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+     <!-- fontawesome -->
+     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+     <link rel="stylesheet" href="../Halaman 4/style/style kelebihan dan kekurangan.css">
 </head>
-<body style="background-color: rgb(255, 217, 0);">
-<style>
-    img{
-    width: 30%;
-    border-radius: 30px;
-}
-</style>
+<body style="background-color: rgb(242, 169, 0);">
 
-    <div class="container">
-        <div class="row mt-4">
+    <input type="checkbox" id="check">
+    <label for="check">
+      <i class="fas fa-bars" id="btn"></i>
+      <i class="fas fa-bars" id="cancel"></i>
+    </label>
+    <div class="sidebar">
+    <header><i class="fab fa-bitcoin"></i> Menu</header>
+  <ul>
+    <li><a href="../index.html"><i class="fas fa-home"></i>Home</a></li>
+    <li><a href="../Halaman 1/information.html"><i class="fas fa-book-open"></i>information</a></li>
+    <li><a href="../Halaman 2/asalusul.html"><i class="fas fa-fast-backward"></i>Asal - usul</a></li>
+    <li><a href="../Halaman 3/jenis.html"><i class="fas fa-stream"></i>Jenis</a></li>
+    <li><a href="./kelebihan dan kekurangan.html"><i class="fab fa-cloudsmith"></i>Kelebihan dan Kekurangan</a></li>
+    <li><a href="../Halaman 5/perbandingan.html"><i class="fas fa-balance-scale"></i>Perbandingan</a></li>
+    <li><a href="../Halaman 6/market summary.html"><i class="fas fa-dollar-sign"></i>Market Summary</a></li>
+    <li><a href="../Halaman 7/source.html"><i class="fas fa-archive"></i>Sources</a></li>
+    <li><a href="../Halaman 8/about.html"><i class="far fa-question-circle"></i>About</a></li>
+</ul>
+</div>
+        <section>
+            <div id="home"> 
+                <div class="logo">
+                    <i class="fab fa-bitcoin"> Bitcoin</i>
+                </div>
+            </div>
+            <div class="container">
+            <div class="row mt-4">
             <div class="col-md-12">
-                <div class="alert alert-success" role="alert" style="background-color: #000000; color: rgb(255, 217, 0); font-family: 'Playfair Display', serif;">
+                <div class="alert alert-success" role="alert" style="background-color: rgb(77, 77, 78); color: rgb(242, 169, 0); font-family: 'Playfair Display', serif;">
                     <div class="card-text text-center">
                         <strong> 
                             <h4> Kelebihan & Kekurangan BITCOIN</h4>
@@ -41,69 +62,70 @@
                     </div>
                 </div>
             </div>
-        <section>
-            <img src="src/kel1.jpg" class="rounded float-start" alt="...">
-            <img src="src/kel2.jpg" class="rounded float-end" alt="...">
-            <img src="src/kel3.jpg" class="rounded mx-auto d-block" alt="...">
-        <br>
-        <div class="card text-white bg-secondary mb-3" style="max-width: 100%;">
-            <div class="card-header" style="font-family: 'Outfit', sans-serif; background-color: black; color:rgb(255, 217, 0);">Kelebihan Bitcoin</div>
-            <div class="card-body" style="background-color: black; color: rgb(255, 217, 0);">
-              <p class="card-text" style="font-family:'Titillium Web', sans-serif;">1. Keamanan transaksi pribadi dengan biaya yang sedikit
-                Apabila kita sudah mempunyai bitcoin, kita bisa melakukan transfer kapan saja maupun di mana
-                saja. Sehingga hal itu bisa mengurangi waktu dan potensi biaya yang timbul dari transaksi apapun
-                itu. 
-            <br><br>
-            2. Keamanan transaksi pribadi juga hal yang utama. Proses transaksi bitcoin ini tidak menggunakan
-            informasi pribadi seperti nama atau nomor kartu kredit sehingga dapat menghilangkan risiko
-            pencurian informasi konsumen untuk kepentingan pencurian identitas.
-            <br><br>
-            3. Potensi pertumbuhan besar
-                            Banyak para investor yang membeli dan menahan mata uang ini. Hal ini karena bitcoin memiliki
-                            potensi pertumbuhan yang besar. Sehingga apabila ke depannya kepercayaan dan penggunaan ini
-            meningkat maka nilai bitcoin akan ikut naik.
-            <br><br>
-            4. Tidak terhubung pada bank atau pemerintah
-                            Seperti yang sudah disebutkan sebelumnya bahwa bitcoin tidak diterbitkan atau didukung oleh bank
-                            maupun pemerintah. Hal ini menjadi salah satu kelebihan bitcoin. Akibat terjadi krisis keuangan
-                            dan resesi hebat, sehingga membuat beberapa investor ingin merangkul mata uang alternatif yang
-                            terdesentralisasi di mana mata uang bitoin ini berada di luar kendali bank biasa, perantara
-                            pemerintahan maupun pihak ketiga lainnya.
-            <br><br>
+            <main>
+                <img src="../Halaman 4/src/kek1.jpg" class="rounded float-start" alt="...">
+                <img src="../Halaman 4/src/kel1.jpg" class="rounded float-end" alt="...">
+                <img src="../Halaman 4/src/kek2.jpg" class="rounded mx-auto d-block" alt="...">
+            <br>
+            <div class="card text-white bg-secondary mb-3" style="max-width: 100%;">
+                <div class="card-header"style="font-family: 'Outfit', sans-serif; background-color: rgb(77, 77, 78); color: rgb(242, 169, 0);">Kelebihan Bitcoin</div>
+                <div class="card-body" style="background-color: rgb(77, 77, 78); color: rgb(242, 169, 0);">
+                <p class="card-text" style="font-family:'Titillium Web', sans-serif;">1. Keamanan transaksi pribadi dengan biaya yang sedikit
+                    Apabila kita sudah mempunyai bitcoin, kita bisa melakukan transfer kapan saja maupun di mana
+                    saja. Sehingga hal itu bisa mengurangi waktu dan potensi biaya yang timbul dari transaksi apapun
+                    itu. 
+                <br><br>
+                2. Keamanan transaksi pribadi juga hal yang utama. Proses transaksi bitcoin ini tidak menggunakan
+                informasi pribadi seperti nama atau nomor kartu kredit sehingga dapat menghilangkan risiko
+                pencurian informasi konsumen untuk kepentingan pencurian identitas.
+                <br><br>
+                3. Potensi pertumbuhan besar
+                                Banyak para investor yang membeli dan menahan mata uang ini. Hal ini karena bitcoin memiliki
+                                potensi pertumbuhan yang besar. Sehingga apabila ke depannya kepercayaan dan penggunaan ini
+                meningkat maka nilai bitcoin akan ikut naik.
+                <br><br>
+                4. Tidak terhubung pada bank atau pemerintah
+                                Seperti yang sudah disebutkan sebelumnya bahwa bitcoin tidak diterbitkan atau didukung oleh bank
+                                maupun pemerintah. Hal ini menjadi salah satu kelebihan bitcoin. Akibat terjadi krisis keuangan
+                                dan resesi hebat, sehingga membuat beberapa investor ingin merangkul mata uang alternatif yang
+                                terdesentralisasi di mana mata uang bitoin ini berada di luar kendali bank biasa, perantara
+                                pemerintahan maupun pihak ketiga lainnya.
+                <br><br>
 
-        </p>
-            </div>
-          </div>
-          <div class="card text-white bg-danger mb-3" style="max-width: 100%;">
-            <div class="card-header" style="font-family: 'Outfit', sans-serif; background-color: black; color: red;">Kekurangan Bitcoin</div>
-            <div class="card-body" style="background-color: black; color: red;">
-              <p class="card-text" style="font-family:'Titillium Web', sans-serif;">1. Harga berubah-ubah
-                Salah satu kekurangan bitcoin adalah harganya yang sering berubah atau tidak stabil. Misal,
-                kenaikan harga bitcoin pada tahun 2012 yang didorong karena adanya spekulan yang bergegas ke
-                pasar bitcoin. Keuntungan tersebut merupakan sebuah kabar baik apabila kita membeli bitcoin di
-                Desember 2018. Pada awalnya, mereka yang membeli bitcoin pada tahun 2017 di mana saat itu harga
-                bitcoin sedang melesat hingga $ 20.000 masih memerlukan pemulihan kerugian yang telah
-                dialaminya.
-                <br>
-                <br>
-                2. Pengguaan yang terbatas
-                                Tidak sembarang perusahaan yang dapat memakai mata uang bitcoin ini. Misal, pada perusahaan
-                                telekomunikasi AT&T yang bergabung dengan perusahaan seperti Microsoft dan Dish Network untuk
-                                memulai pembayaran dengan bitcoin. Oleh sebab itu, perusahaan-perusahaan tersebut akan
-                                menerapkan beberapa pengecualian yang tidak sejalan dengan aturan perusahaan.
-                <br><br>
-                3. Risiko peretasan
-                                Kekurangan lainnya jika kita menggunakan bitcoin akan menjadi peluang bagi para peretas. Karena
-                                teknologi blockchain dalam bitcoin yang dipercaya lebih aman dibanding transfer uang elektronik
-                                tradisional sudah menjadi target yang menarik.Contohnya pada Mei 2019 lalu, terjadi pencurian
-                                bitcoin lebih dari $ 40 juta dari beberapa akun yang bernilai tinggi di bursa cryptocurrency
-                                binance.
-                <br><br>
             </p>
+                </div>
             </div>
-        </section>
+            <div class="card text-white bg-danger mb-3" style="max-width: 100%;">
+                <div class="card-header" style="font-family: 'Outfit', sans-serif; background-color: black; color:rgb(255, 255, 255);">Kekurangan Bitcoin</div>
+                <div class="card-body" style="background-color: black; color: rgb(255, 255, 255);">
+                    <p class="card-text" style="font-family:'Titillium Web', sans-serif;">1. Harga berubah-ubah
+                    Salah satu kekurangan bitcoin adalah harganya yang sering berubah atau tidak stabil. Misal,
+                    kenaikan harga bitcoin pada tahun 2012 yang didorong karena adanya spekulan yang bergegas ke
+                    pasar bitcoin. Keuntungan tersebut merupakan sebuah kabar baik apabila kita membeli bitcoin di
+                    Desember 2018. Pada awalnya, mereka yang membeli bitcoin pada tahun 2017 di mana saat itu harga
+                    bitcoin sedang melesat hingga $ 20.000 masih memerlukan pemulihan kerugian yang telah
+                    dialaminya.
+                    <br>
+                    <br>
+                    2. Pengguaan yang terbatas
+                                    Tidak sembarang perusahaan yang dapat memakai mata uang bitcoin ini. Misal, pada perusahaan
+                                    telekomunikasi AT&T yang bergabung dengan perusahaan seperti Microsoft dan Dish Network untuk
+                                    memulai pembayaran dengan bitcoin. Oleh sebab itu, perusahaan-perusahaan tersebut akan
+                                    menerapkan beberapa pengecualian yang tidak sejalan dengan aturan perusahaan.
+                    <br><br>
+                    3. Risiko peretasan
+                                    Kekurangan lainnya jika kita menggunakan bitcoin akan menjadi peluang bagi para peretas. Karena
+                                    teknologi blockchain dalam bitcoin yang dipercaya lebih aman dibanding transfer uang elektronik
+                                    tradisional sudah menjadi target yang menarik.Contohnya pada Mei 2019 lalu, terjadi pencurian
+                                    bitcoin lebih dari $ 40 juta dari beberapa akun yang bernilai tinggi di bursa cryptocurrency
+                                    binance.
+                    <br><br>
+                </p>
+                </div>
+            </main>
+        </section> 
     </div>
-</section>
+    
 
 </body>
 
