--- a/Tugas Besar Web Dasar (Kelompok 4)/Halaman 1/information.html
+++ b/Tugas Besar Web Dasar (Kelompok 4)/Halaman 1/information.html
@@ -2,30 +2,47 @@
 <html>
     <head>
         <title>Informasi</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../Halaman 1/style/style information.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../Halaman 1/style/style information.css">
         <script src="../Halaman 1/script/script.js"></script>
+        <!--google fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
+        <!-- bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- fontawesome -->
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     </head>
-    <body>
+    <body style="background-color: rgb(242, 169, 0);">
       <input type="checkbox" id="check">
-    <label for="check">
-      <i class="fas fa-bars" id="btn"></i>
-      <i class="fas fa-bars" id="cancel"></i>
-    </label>
-    <div class="sidebar">
-    <header><i class="fab fa-bitcoin"></i> Menu</header>
-  <ul>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 1/information.html"><i class="fas fa-book-open"></i>information</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 2/asalusul.html"><i class="fas fa-fast-backward"></i>Asal - usul</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 3/"><i class="fas fa-stream"></i>Jenis</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 4/kelebihan dan kekurangan.html"><i class="fas fa-dollar-sign"></i>Market Summary</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 5/"><i class="fab fa-cloudsmith"></i>Kelebihan dan Kekurangan</a></li>
-    <li><a href="#"><i class="fas fa-balance-scale"></i>Perbandingan</a></li>
-    <li><a href="#"><i class="fas fa-archive"></i>Sources</a></li>
-    <li><a href="#"><i class="far fa-question-circle"></i>About</a></li>
+<label for="check">
+  <i class="fas fa-bars" id="btn"></i>
+  <i class="fas fa-bars" id="cancel"></i>
+</label>
+<div class="sidebar">
+<header><i class="fab fa-bitcoin"></i> Menu</header>
+<ul>
+  <li><a href="../index.html"><i class="fas fa-home"></i>Home</a></li>
+  <li><a href="./information.html"><i class="fas fa-book-open"></i>information</a></li>
+  <li><a href="../Halaman 2/asalusul.html"><i class="fas fa-fast-backward"></i>Asal - usul</a></li>
+  <li><a href="../Halaman 3/jenis.html"><i class="fas fa-stream"></i>Jenis</a></li>
+  <li><a href="../Halaman 4/kelebihan dan kekurangan.html"><i class="fab fa-cloudsmith"></i>Kelebihan dan Kekurangan</a></li>
+  <li><a href="../Halaman 5/perbandingan.html"><i class="fas fa-balance-scale"></i>Perbandingan</a></li>
+  <li><a href="../Halaman 6/market summary.html"><i class="fas fa-dollar-sign"></i>Market Summary</a></li>
+  <li><a href="../Halaman 7/source.html"><i class="fas fa-archive"></i>Sources</a></li>
+  <li><a href="../Halaman 8/about.html"><i class="far fa-question-circle"></i>About</a></li>
 </ul>
 </div>
         <section>
@@ -38,7 +55,7 @@
             <div class="container">
               <div class="row mt-4">
                 <div class="col-md-12">
-                    <div class="alert alert-success" role="alert">
+                    <div class="alert alert-success" role="alert" style="background-color: rgb(77, 77, 78); color: rgb(242, 169, 0); font-family: 'Playfair Display', serif;">
                         <div class="card-text text-center">
                             <strong> 
                                 <h4>Information</h4>
@@ -46,42 +63,45 @@
                         </div>
                     </div>
                 <div class="table-responsive">
-                  <main>
                     <table class="table table-striped table-hover">
                       <tbody>
                         <tr>
-                          <td><img src="src/1.jpg" alt="" width="50%" height="50%"></td>
+                          <td><img src="../Halaman 1/src/1.jpg" alt="" width="100%" height="100%"></td>
                           <td><b><h1 class="atas">ASAL-USUL BITCOIN</h1></b><br>
-                            <a href="jenis.html"><button id="button1">More information >></button></a></td>
+                            <a href="../Halaman 2/asalusul.html"><button id="button1">More information >></button></a></td>
                         </tr>
                         <tr>
-                          <td><img src="src/1.jpg" alt=""  width="50%" height="50%"></td>
+                          <td><img src="../Halaman 1/src/2.jpg" alt="" width="100%" height="100%"></td>
                           <td><b><h1 class="atas">JENIS BITCOIN</h1></b><br>
-                            <a href="jenis.html"><button id="button1">More information >></button></a></td>
+                            <a href="../Halaman 3/jenis.html"><button id="button1">More information >></button></a></td>
                         </tr>
                         <tr>
-                          <td><img src="src/1.jpg" alt=""  width="50%" height="50%"></td>
+                          <td><img src="../Halaman 1/src/3.jpg" alt=""  width="100%" height="100%"></td>
                           <td><b><h1 class="atas">KELEBIHAN DAN KEKURANGAN</h1></b><br>
-                            <a href="jenis.html"><button id="button1">More information >></button></a></td>
+                            <a href="../Halaman 4/kelebihan dan kekurangan.html"><button id="button1">More information >></button></a></td>
                         </tr>
                         <tr>
-                          <td><img src="src/1.jpg" alt=""   width="50%" height="50%"></td>
+                          <td><img src="../Halaman 1/src/4.jpg" alt=""   width="100%" height="100%"></td>
                           <td><b><h1 class="atas">PERBANDINGAN DENGAN KOIN LAIN</h1></b><br>
-                            <a href="jenis.html"><button id="button1">More information >></button></a></td>
+                            <a href="../Halaman 5/perbandingan.html"><button id="button1">More information >></button></a></td>
                         </tr>
                         <tr>
-                          <td><img src="src/1.jpg" alt=""  width="50%" height="50%"></td>
+                          <td><img src="../Halaman 1/src/5.jpg" alt=""  width="100%" height="100%"></td>
                           <td><b><h1 class="atas">MARKET SUMMARY</h1></b><br>
-                            <a href="jenis.html"><button id="button1">More information >></button></a></td>
+                            <a href="../Halaman 6/market summary.html"><button id="button1">More information >></button></a></td>
                         </tr>
                         <tr>
-                          <td><img src="src/1.jpg" alt="" width="50%" height="50%"></td>
+                          <td><img src="../Halaman 1/src/6.jpg" alt="" width="100%" height="100%"></td>
                           <td><b><h1 class="atas">SOURCE</h1></b><br>
-                            <a href="jenis.html"><button id="button1">More information >></button></a></td>
+                            <a href="../Halaman 7/source.html"><button id="button1">More information >></button></a></td>
                         </tr>
+                        <tr>
+                        <td><img src="../Halaman 1/src/7.jpg" alt="" width="100%" height="100%"></td>
+                        <td><b><h1 class="atas">ABOUT</h1></b><br>
+                          <a href="../Halaman 8/about.html"><button id="button1">More information >></button></a></td>
+                      </tr>
                       </tbody>
                     </table>
-                    </main>
                   </div>
         </center> 
     </body>
