--- a/Tugas Besar Web Dasar (Kelompok 4)/Halaman 2/asalusul.html
+++ b/Tugas Besar Web Dasar (Kelompok 4)/Halaman 2/asalusul.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asal-Usul</title>
-    <script src="script/video.js"></script>
-    <link rel="stylesheet" href="style/style asal-usul.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
+    <script src="../Halaman 2/script/video.js"></script>
+    <link rel="stylesheet" href="../Halaman 2/style/style asal-usul.css">
+    <!--google fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -24,7 +28,7 @@
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
+    <body style="background-color: rgb(242, 169, 0);">
     <input type="checkbox" id="check">
     <label for="check">
       <i class="fas fa-bars" id="btn"></i>
@@ -33,15 +37,15 @@
     <div class="sidebar">
     <header><i class="fab fa-bitcoin"></i> Menu</header>
   <ul>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 1/information.html"><i class="fas fa-book-open"></i>information</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 2/asalusul.html"><i class="fas fa-fast-backward"></i>Asal - usul</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 3/"><i class="fas fa-stream"></i>Jenis</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 4/kelebihan dan kekurangan.html"><i class="fas fa-dollar-sign"></i>Market Summary</a></li>
-    <li><a href="../Tugas Besar Web Dasar (Kelompok 4)/Halaman 5/"><i class="fab fa-cloudsmith"></i>Kelebihan dan Kekurangan</a></li>
-    <li><a href="#"><i class="fas fa-balance-scale"></i>Perbandingan</a></li>
-    <li><a href="#"><i class="fas fa-archive"></i>Sources</a></li>
-    <li><a href="#"><i class="far fa-question-circle"></i>About</a></li>
+  <li><a href="../index.html"><i class="fas fa-home"></i>Home</a></li>
+  <li><a href="../Halaman 1/information.html"><i class="fas fa-book-open"></i>information</a></li>
+  <li><a href="./asalusul.html"><i class="fas fa-fast-backward"></i>Asal - usul</a></li>
+  <li><a href="../Halaman 3/jenis.html"><i class="fas fa-stream"></i>Jenis</a></li>
+  <li><a href="../Halaman 4/kelebihan dan kekurangan.html"><i class="fab fa-cloudsmith"></i>Kelebihan dan Kekurangan</a></li>
+  <li><a href="../Halaman 5/perbandingan.html"><i class="fas fa-balance-scale"></i>Perbandingan</a></li>
+  <li><a href="../Halaman 6/market summary.html"><i class="fas fa-dollar-sign"></i>Market Summary</a></li>
+  <li><a href="../Halaman 7/source.html"><i class="fas fa-archive"></i>Sources</a></li>
+  <li><a href="../Halaman 8/about.html"><i class="far fa-question-circle"></i>About</a></li>
 </ul>
 </div>
 
@@ -54,8 +58,8 @@
     <div class="container">
     <div class="row mt-4">
     <div class="col-md-12">
-        <div class="alert alert-success" role="alert">
-            <div class="card-text text-center">
+        <div class="alert alert-success" role="alert" style="background-color: rgb(77, 77, 78);">
+            <div class="card-text text-center" style="color: rgb(242, 169, 0);  font-family: 'Playfair Display', serif;">
                 <strong> 
                     <h2>Asal - Usul Bitcoin <span class="badge bg-warning"><i class="fab fa-btc" style="max-width: 70%;"></i></span></h2>
                 </strong>
@@ -69,7 +73,7 @@
                         <td colspan="2" class="word">
                             <h1>Pengertian Bitcoin</h1>
                             <br>
-                            <div class="alert alert-warning" role="alert" style="opacity: 0.9;">
+                            <div class="alert alert-warning" role="alert" style="opacity: 0.9; background-color: rgb(77, 77, 78);">
                                 <p>Bitcoin adalah mata uang digital yang dibuat dan disimpan secara elektronik. Sebagai mata uang
                                 digital, Bitcoin tidak memiliki wujud fisik seperti mata uang fiat. Tidak ada otoritas yang
                                 mengatur atau badan terpusat yang mengendalikannya. Merujuk pada buku Bitcoin From Beginner To
@@ -80,17 +84,17 @@
                               </div>
                             <p>     
                         </td>
-                        <td style="text-align: center;"><img src="src/peng.jpg" alt="pengertian"></td>
+                        <td style="text-align: center;"><img src="../Halaman 2/src/peng.jpg" alt="pengertian"></td>
                     </tr>
                     <br>
                     <br>
                     <tr>
-                        <td style="text-align: center;"><img src="src/sej.jpg" alt="sejarah"></td>
+                        <td style="text-align: center;"><img src="../Halaman 2/src/sej.jpg" alt="sejarah"></td>
                         <td colspan="2" class="word2">
                             <br><br>
                             <h1>Sejarah Bitcoin</h1>
                             <br>
-                            <div class="alert alert-warning" role="alert" style="opacity: 0.9;">
+                            <div class="alert alert-warning" role="alert" style="opacity: 0.9;  background-color: rgb(77, 77, 78);"">
                                 <p>     Berdasarkan buku The Bitcoin Genesis, sejarah Bitcoin berawal pada bulan November 2008. Seseorang
                             dengan nama pengguna Satoshi Nakamoto merilis sebuah makalah ke milis kriptografi. Makalah ini
                             terdiri dari sembilan halaman dan diberi judul “Bitcoin: A Peer-to-Peer Electronic Cash System”.
@@ -117,7 +121,7 @@
                    <h1>Apa itu Bitcoin?</h1>
                 <table>
                     <tr>
-                        <td><video src="src/videobtc.mp4" width="500px" id="video1"></video></td>
+                        <td><video src="../Halaman 2/src/videobtc.mp4" width="500px" id="video1"></video></td>
                     </tr>
                     <tr>
                         <td>
